Corrected issue with paragraph spacing.
git-svn-id: http://svn.typosphere.org/typo/trunk@249 820eb932-12ee-0310-9ca8-eeb645f39767

--- a/public/stylesheets/azure.css
+++ b/public/stylesheets/azure.css
@@ -85,7 +85,7 @@ body {
 	}
 	
   form, div { padding: 0; margin: 0; }
-  p { margin: 0; padding: 0; }
+  p { margin: 0 0 1em 0; padding: 0; }
   img { border: 0; }
 
   
